# ersilia-precalculation-poc

./: .gitignore  Makefile  README.md  pyproject.toml
ersilia_precalc_poc/: inference.py  models.py  predictions.py  read.py  write.py
notebooks/: example.ipynb
scripts/: create_dynamodb_table.py  generate_predictions.py  write_predictions_to_dynamodb.py
tests/: test_models.py  test_read.py
