[tool.poetry]
name = "ersilia-precalc-poc"
version = "0.1.0"
description = "POC Repository to experiment with pre-calculating outputs for the Ersilia Model Hub"
authors = ["Kartikey Vyas <kartikeyvyas23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docker = "^6.1.3"
bentoml = "^1.1.0"
urllib3 = "^1"
ersilia = {path = "ersilia", develop = true}
pandas = "^2.0.3"
boto3 = "^1.28.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.278"
localstack = "^2.1.0"
ipykernel = "^6.25.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
